class-management-fe/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: class-management-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-management-fe
  template:
    metadata:
      labels:
        app: class-management-fe
    spec:
      containers:
        - name: class-management-fe-container
          image: th1enlm02/class-management-fe:latest
          ports:
            - containerPort: 3000
